add gtoken-webhook K8s

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,8 @@ jobs:
       env:
         DOCKER_BUILDKIT: 1
       run: |
-        docker build --tag ${GITHUB_REPOSITORY}:${IMAGE_TAG} .
+        docker build --tag ${DOCKER_USERNAME}/gtoken:${IMAGE_TAG} cmd/gtoken
+        docker build --tag ${DOCKER_USERNAME}/gtoken-webhook:${IMAGE_TAG} cmd/gtoken-webhook
     
     - name: push image
       env:
@@ -34,5 +35,6 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
-        docker push ${GITHUB_REPOSITORY}:${IMAGE_TAG}
+        docker push ${DOCKER_USERNAME}/gtoken:${IMAGE_TAG}
+        docker push ${DOCKER_USERNAME}/gtoken-webhook:${IMAGE_TAG}
         docker logout
