--- a/cmd/gtoken/Makefile
+++ b/cmd/gtoken/Makefile
@@ -7,7 +7,7 @@ TESTPKGS = $(shell env GO111MODULE=on $(GO) list -f \
 			'{{ if or .TestGoFiles .XTestGoFiles }}{{ .ImportPath }}{{ end }}' \
 			$(PKGS))
 BIN      = $(CURDIR)/.bin
-GOLANGCI_LINT_CONFIG = $(CURDIR)/../../.golangci.yaml
+GOLANGCI_LINT_CONFIG = $(CURDIR)/.golangci.yaml
 
 GO      = go
 TIMEOUT = 15
