fix docker build

--- a/cmd/gtoken-webhook/Dockerfile
+++ b/cmd/gtoken-webhook/Dockerfile
@@ -45,6 +45,6 @@ FROM scratch
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 # this is the last commabd since it's never cached
-COPY --from=build /go/src/gtoken-webhook/.bin/gtoken-webhook /gtoken-webhook
+COPY --from=build /go/src/gtoken-webhook/.bin/github.com/doitintl/gtoken-webhook /gtoken-webhook
 
 ENTRYPOINT ["/gtoken-webhook"]
