--- a/cmd/gtoken/Dockerfile
+++ b/cmd/gtoken/Dockerfile
@@ -45,6 +45,6 @@ FROM scratch
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 # this is the last commabd since it's never cached
-COPY --from=build /go/src/gtoken/.bin/gtoken /gtoken
+COPY --from=build /go/src/gtoken/.bin/github.com/doitintl/gtoken /gtoken
 
 ENTRYPOINT ["/gtoken"]
