--- a/cmd/gtoken/Dockerfile
+++ b/cmd/gtoken/Dockerfile
@@ -36,7 +36,7 @@ FROM alpine:3.11 as certs
 RUN apk --update add ca-certificates
 # this is for debug only Alpine image
 COPY --from=build /go/src/gtoken/.bin/github.com/doitintl/gtoken /gtoken
-ENTRYPOINT ["/gtoken"]
+CMD ["/gtoken"]
 
 #
 # ------ gtoken release Docker image ------
