--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,10 +12,10 @@ jobs:
   build:
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
- 
+
     runs-on: ubuntu-18.04
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
- 
+
     steps:
     - uses: actions/checkout@v1
 
@@ -34,9 +34,9 @@ jobs:
       run: |
         docker build --tag ${DOCKER_REPOSITORY}/gtoken:${IMAGE_TAG} cmd/gtoken
         docker build --tag ${DOCKER_REPOSITORY}/gtoken:${IMAGE_TAG}-alpine --target certs cmd/gtoken
-        docker build --tag ${DOCKER_REPOSITORY}/gtoken-daemon:${IMAGE_TAG} cmd/gtoken/daemon
+        docker build --tag ${DOCKER_REPOSITORY}/gtoken-daemon:${IMAGE_TAG} --file Dockerfile-daemon cmd/gtoken/daemon
         docker build --tag ${DOCKER_REPOSITORY}/gtoken-webhook:${IMAGE_TAG} cmd/gtoken-webhook
-    
+
     - name: push image
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
