Only build on tag

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,6 +49,10 @@ steps:
         - ${DRONE_COMMIT_SHA}
       build_args_from_env:
         - GITHUB_TOKEN
+    when:
+      event:
+        include:
+          - tag
 
   - name: docker-prod-push gtoken-webhook
     image: plugins/docker
@@ -65,3 +69,7 @@ steps:
         - ${DRONE_COMMIT_SHA}
       build_args_from_env:
         - GITHUB_TOKEN
+    when:
+      event:
+        include:
+          - tag
