--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -18,6 +18,10 @@ spec:
         - name: gtoken-webhook
           image: doitintl/gtoken-webhook
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 250m
+              memory: 512Mi
           args:
             - --log-level=debug
             - server
