--- a/deployment/clusterrolebinding.yaml
+++ b/deployment/clusterrolebinding.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: gtoken-webhook-sa
-  namespace: default
+  namespace: gtoken
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
