--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,6 +52,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: cmd/gtoken
+        platforms: linux/amd64,linux/arm64
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
         push: true
@@ -63,6 +64,7 @@ jobs:
       with:
         context: cmd/gtoken
         target: certs
+        platforms: linux/amd64,linux/arm64
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
         push: true
@@ -73,6 +75,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: cmd/gtoken-webhook
+        platforms: linux/amd64,linux/arm64
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
         push: true
